--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <div>
 
       </div>
-      <h1>
-        Q<span>uiz</span>
-      </h1>
+      <img src="javascript.svg" alt="">
       <div>
 
       </div>
