--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div id="back">
-      <div>
+      <div class="up-circle">
 
       </div>
-      <img src="javascript.svg" alt="">
-      <div>
+      
 
-      </div>
+        <img src="javascript.svg" alt="">
+
     </div>
     <script type="module" src="/main.js"></script>
   </body>
