--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="back">
+    <div class="back">
       <div class="up-circle">
-
       </div>
-      
-
-        <img src="javascript.svg" alt="">
-
+      <img src="javascript.svg" class="img" alt="">
+      <h1>?</h1>
+      <div id="rectangle1">
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
