--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <h1>?</h1>
       <div id="rectangle1">
       </div>
+      <div id="rectangle2"></div>
+      <div id="circle">
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
