--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="back">
-      <div class="up-circle">
-      </div>
-      <img src="javascript.svg" class="img" alt="">
+    <div class="content">
+      <div class="up-circle"></div>
+    <div class="container">
+      <input type="image" src="javascript.svg" name="img" class="img" id="img"/>
       <h1>?</h1>
-      <div id="rectangle1">
-      </div>
-      <div id="rectangle2"></div>
-      <div id="circle">
-      </div>
+      <img src="shape.svg" class="shape" alt="">
+    </div>
+    <div class="new-content" style="display: none;">
+      <h2>New Content</h2>
+      <p>This is the new content that is shown after clicking the image.</p>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
