--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   <body>
     <div class="content">
       <div class="up-circle"></div>
-    <div class="container">
-      <input type="image" src="javascript.svg" name="img" class="img" id="img"/>
-      <h1>?</h1>
-      <img src="shape.svg" class="shape" alt="">
+    
+      <input type="image" src="javascript.svg" name="img" class="fade-in" id="img"/>
+      <h1 id="question_mark" class="fade-in">?</h1>
+      <img src="shape.svg" class="fade-in" id="shape" alt="">
+      <!-- choose the kind of quiz -->
+       <div id="quiz-container">
+        <h2 id="question-choose">Choose page</h2>
+        <h2 id="question-title">question title</h2>
+        <div id="underline"></div>
+        <div id="question-options"></div>
+        <button class="titles"></button>
+        <button id="next-btn">Next</button>
+       </div>
     </div>
-    <div class="new-content" style="display: none;">
-      <h2>New Content</h2>
-      <p>This is the new content that is shown after clicking the image.</p>
-    </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
