f1,f2: start, check answer color

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
   </head>
   <body>
     <div class="content">
+      <div class="container">
       <div class="up-circle" id="up-circle" style="display: flex;">
       </div>
     
       <input type="image" src="javascript.svg" name="img" class="fade-in" id="img"/>
       <h1 id="question_mark" class="fade-in">?</h1>
-      <img src="shape.svg" class="fade-in" id="shape" alt="">
+      <div id="start-container" class="fade-in">
+        <button id="start-btn">Start Quiz</button>
+    </div>
+    </div>
+      <!-- <img src="shape.svg" class="fade-in" id="shape" alt=""> -->
       <!-- choose the kind of quiz -->
       
       <div id="quiz-selection" style="display: none;">
